--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,105 @@
+* {
+    box-sizing: border-box;
+  }
+  
+  html, body,
+  ul, ol, li,
+  h1, h2, h3, h4, h5, h6, p, div {
+    margin: 0;
+    padding: 0;
+  }
+  
+  body {
+    font-family: "Lucida Grande";
+  }
+  
+  a {
+    text-decoration: none;
+  }
+  
+  .clear {
+    clear: left;
+  }
+  
+  .container {
+    max-width: 1170px;
+    padding: 0 15px;
+    margin: 0 auto;
+  }
+  
+  .top-wrapper {
+    padding: 180px 0 100px 0;
+    background-image: url(https://i.ytimg.com/vi/UWZ_jBB15Gk/maxresdefault.jpg);
+    background-size: cover;
+    color: rgb(12, 47, 247);
+    text-align: center;
+    opacity: 0.9;
+  }
+  
+  .top-wrapper h1 {
+    opacity: 0.7;
+    font-size: 45px;
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+  }
+  
+  h1,p {
+    color: white;
+    text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  }
+  
+  h1{
+    font-family: "Cursive";
+   
+  }
 
+  p{
+    padding-top: 20px;
+  }
+
+  .top-wrapper p {
+    opacity: 0.7;
+    margin-bottom: 3px;
+  }
+  
+  .btn-wrapper {
+    text-align: center;
+    margin: 20px 0;
+  }
+  
+  .btn-wrapper p {
+    margin: 10px 0;
+  }
+  
+  @keyframes example {
+    from {background-color: red;}
+    to {background-color: blueviolet;}
+  }
+
+  .btn-Pesan {
+    border: 2px solid rgb(17, 16, 16);
+    border-radius: 5px;
+    color:rgb(249, 247, 252);
+    width: 100px;
+    height: 100px;
+    background-color: red;
+    animation-name: example;
+    animation-duration: 4s;
+  }
+  
+  .btn-wrapper {
+    padding: 75px 150px;
+    color: rgb(247, 6, 6);
+    display: inline-block;
+    opacity: 0.8;
+    border-radius: 4px;
+    text-align: center;
+  }
+  
+  .btn:hover {
+    opacity: 1;
+  }
+  
+  .fa {
+    margin-right: 5px;
+  }
