--- a/responsive.css
+++ b/responsive.css
@@ -1,1 +1,33 @@
+@media all and (max-width: 1000px) {
+    .top-wrapper h1 {
+      font-size: 32px;
+    }
 
+  }
+  
+  
+  @media all and (max-width: 670px) {   
+    .btn-wrapper {
+      width: 100%;
+    }
+    
+    .btn-Pesan{
+      margin-bottom: 10px;
+    }
+    
+    .top-wrapper {
+      text-align: left;
+    }
+
+    .top-wrapper h1 {
+      font-size: 24px;
+      line-height: 36px;
+    }
+    
+    .top-wrapper p {
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+    
+  
