--- a/stylesheet.css
+++ b/stylesheet.css
@@ -273,6 +273,21 @@
   .kuee{
     color:#6C3828;
   }
+  .kuef{
+    color:#6C3828;
+  }
+  .kueg{
+    color:#6C3828;
+  }
+  .kueh{
+    color:#6C3828;
+  }
+  .kuei{
+    color:#6C3828;
+  }
+  .kuej{
+    color:#6C3828;
+  }
 
   .produk p{
     text-align: center;
